# OcrPaddle

./: settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/PaddleLite/include/: paddle_api.h  paddle_image_preprocess.h  paddle_place.h  paddle_use_kernels.h  paddle_use_ops.h  paddle_use_passes.h
app/src/main/: AndroidManifest.xml
app/src/main/aidl/top/bogey/ocr/: IOcr.aidl  IOcrCallback.aidl
app/src/main/assets/: cls.nb  manifest.json  ocr_det_fp16.tflite  ppocr_v5_mobile_det.ncnn.param  ppocr_v5_mobile_rec.ncnn.param
app/src/main/cpp/: CMakeLists.txt  async_inference.h  common.h  image_utils.cpp  image_utils.h  litert_cc_wrapper.h  litert_config.h  litert_env_manager.h  litert_options_lite.cc  litert_tensor_buffer_types_lite.cc  logging.h  native-lib.cpp  native-lib.h  native.cpp  native.h  ocr_clipper.cpp  ocr_clipper.hpp  ocr_cls_process.cpp  ocr_crnn_process.cpp  ocr_crnn_process.h  ocr_db_post_process.cpp  ocr_db_post_process.h  ocr_engine.cpp  ocr_engine.h  ocr_ppredictor.cpp  ocr_ppredictor.h  postprocess.cpp  postprocess.h  ppocr.cpp  ppocr.h  ppocr_dict.h  ppocrv5_jni.cpp  ppocrv5_jni.h  ppredictor.cpp  ppredictor.h  predictor_input.cpp  predictor_input.h  predictor_output.cpp  predictor_output.h  preprocess.cpp  (+6 more)
app/src/main/cpp/litert_cc_sdk/: CMakeLists.txt  README.md
app/src/main/cpp/litert_cc_sdk/include/litert/build_common/: build_config.h
app/src/main/java/top/bogey/ocr/: OcrNativeResult.java  OcrResult.java  OcrService.java
app/src/main/java/top/bogey/ocr/baidu/paddle/: LetterBox.java  Ocr.java
app/src/main/res/values/: strings.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
ncnn/arm64-v8a/lib/cmake/ncnn/: ncnnConfig.cmake
